opendj: change ldap attribute to case sensitive

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,8 @@
     },
     "[yaml]": {
       "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
+    "[jsonc]": {
+      "editor.defaultFormatter": "vscode.json-language-features"
     }
 }
