--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -30,6 +30,13 @@ Host InfSvc-Debian
     IdentityFile ~/.ssh/vagrant
     Port 22
 
+Host SvcDisc-FCOS
+    StrictHostKeyChecking no
+    HostName 192.168.255.20
+    User podmgr
+    IdentityFile ~/.ssh/vagrant
+    Port 22
+
 Host InfSvc-Alpine
     StrictHostKeyChecking no
     HostName 192.168.255.21
