vm-dev-fedora: update vm ip

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -37,6 +37,13 @@ Host SvcDisc-FCOS
     IdentityFile ~/.ssh/vagrant
     Port 22
 
+Host Dev-Fedora
+    StrictHostKeyChecking no
+    HostName 192.168.255.30
+    User devel
+    IdentityFile ~/.ssh/vagrant
+    Port 22
+
 Host InfSvc-Alpine
     StrictHostKeyChecking no
     HostName 192.168.255.21
