--- a/VagrantWorkShop/VyOS/Vagrantfile
+++ b/VagrantWorkShop/VyOS/Vagrantfile
@@ -12,27 +12,26 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "VYOS13x-WAN-G2"
+  config.vm.box = "VYOS14x-G2"
   config.vm.network "private_network", bridge: "Default Switch"
   config.ssh.insert_key = false
   
   config.vm.provider "hyperv" do |hv, config|
-    hv.vmname = "VyOS13x-G2"
+    hv.vmname = "VyOS14x-G2"
     # hv.auto_stop_action  = "Save"
     hv.maxmemory = 2048
     hv.memory = 768
     config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
       trigger.info = "Add new network addapter"
       # Start-BitsTransfer 'https://raw.githubusercontent.com/juewuy/ShellClash/master/install.sh'"}
-      trigger.run = {inline: "./Add-VMNetworkAdapter.ps1 -vmname VyOS13x-G2;
-                              Start-BitsTransfer 'https://raw.githubusercontent.com/juewuy/ShellClash/1.7.0/install.sh'"}
+      trigger.run = {inline: "./Add-VMNetworkAdapter.ps1 -vmname VyOS13x-G2"}
     end
   end
-  config.vm.provision "shell", path: "./provisionConfig-LAN.sh"
-  config.vm.provision "shell", path: "./provisionConfig-dns_forwarding.sh"
-  config.vm.provision "shell", path: "./provisionConfig-dhcp_server.sh"
-  config.vm.provision "file", source: "./install.sh", destination: "/home/vagrant/install-clash.sh"
-  config.vm.provision "file", source: "./finalConfig.sh", destination: "/home/vagrant/finalConfig.sh"
+  # config.vm.provision "shell", path: "./provisionConfig-LAN.sh"
+  # config.vm.provision "shell", path: "./provisionConfig-dns_forwarding.sh"
+  # config.vm.provision "shell", path: "./provisionConfig-dhcp_server.sh"
+  # config.vm.provision "file", source: "./install.sh", destination: "/home/vagrant/install-clash.sh"
+  # config.vm.provision "file", source: "./finalConfig.sh", destination: "/home/vagrant/finalConfig.sh"
   # config.vm.provision "file", source: "./vyos-install-docker.sh", destination: "/home/vagrant/vyos-install-docker.sh"
   # config.vm.provision "file", source: "./docker-compose.vyos-pihole.yaml", destination: "/home/vagrant/docker-compose.yaml"
   # Disable automatic box update checking. If you disable this, then
