--- a/TerraformWorkShop/Quadlet/SvcDisc-traefik/podman-traefik/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-traefik/podman-traefik/values-sololab.yaml
@@ -1,6 +1,6 @@
 traefik:
   image:
-    registry: zot.mgmt.sololab
+    registry: zot.day0.sololab
     repository: library/traefik
     tag: v3.0.1
   containerSecurityContext:
@@ -33,11 +33,11 @@ traefik:
     traefik.enable: true
     traefik.http.middlewares.userPass.basicauth.users: admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
     traefik.http.routers.dashboard-redirect.entrypoints: web
-    traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.mgmt.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    traefik.http.routers.dashboard-redirect.rule: "Host(`traefik.day0.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
     traefik.http.routers.dashboard-redirect.middlewares: toHttps@file
     traefik.http.routers.dashboard.entryPoints: webSecure
     traefik.http.routers.dashboard.tls: true
-    traefik.http.routers.dashboard.rule: "Host(`traefik.mgmt.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+    traefik.http.routers.dashboard.rule: "Host(`traefik.day0.sololab`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
     traefik.http.routers.dashboard.service: api@internal
     traefik.http.routers.dashboard.middlewares: userPass
   extraEnvVars:
