vault-tf-quadlet: remove init-vault script, update helm value adopt to sidecar unseal

--- a/TerraformWorkShop/Quadlet/SvcDisc-vault/podman-vault/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/SvcDisc-vault/podman-vault/values-sololab.yaml
@@ -65,6 +65,11 @@ vault:
 
   autoUnseal:
     enabled: true
+    env:
+      - name: VAULT_ADDR
+        value: https://127.0.0.1:8200
+      - name: VAULT_OPERATOR_SECRETS_JSON_PATH
+        value: "/vault/unseal/vault_operator_secrets"
 
 volumePermissions:
   enabled: true
